pop up function finalized

--- a/index.html
+++ b/index.html
@@ -90,25 +90,21 @@
                 <li>2015</li>
               </ul>
             </div>
-            <!-- <div class=""> -->
-              <img class="popup-portfolio-image" src="images/dt-uber.png" alt="">
-            <!-- </div> -->
+            <img class="popup-portfolio-image" src="images/portfolio_1.png" alt="Portfolio-Image">
+            <img class="popup-image" src="images/dt-fb.png" alt="Portfolio-Image">
             <!-- for mobile -->
             <div class="mob-popup">
               <div class="description">
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent
               </div>
               <ul class="languages">
-                <li>html</li>
-                <li>css</li>
-                <li>javaScript</li>
-                <li>area</li>
-                <li>area</li>
-                <li>area</li>
+                <li class="tech"></li>
+                <li class="tech"></li>
+                <li class="tech"></li>
               </ul>
               <div class="modal-btn">
-                <a href="" class="button popup-btn">See Source <img src="images/arrow-icon.png" alt="Arrow-Image"></a>
-                <a href="" class="button popup-btn">See live <img src="images/github-icon.png" alt="GitHub-Image"></a>
+                <a href="" class="button popup-btn" id="live">See Live <img src="images/arrow-icon.png" alt="Arrow-Image"></a>
+                <a href="" class="button popup-btn" id="source">See Source <img src="images/github-icon.png" alt="GitHub-Image"></a>
               </div>
             </div>
             <!-- for desktop -->
@@ -118,14 +114,16 @@
               </div>
               <div>
                 <ul class="dt-languages">
-                  <li>html</li>
-                  <li>Ruby on rails</li>
-                  <li>css</li>
-                  <li>javaScript</li>
+                  <li class="tech2"></li>
+                  <li class="tech2"></li>
+                  <li class="tech2"></li>
+                  <li class="tech2"></li>
+                  <li class="tech2"></li>
+                  <li class="tech2"></li>
                 </ul>
                 <div class="modal-btn">
-                  <a href="" class="button popup-btn">See Source <img src="images/arrow-icon.png" alt="Arrow-Image"></a>
-                  <a href="" class="button popup-btn">See live <img src="images/github-icon.png" alt="GitHub-Image"></a>
+                  <a href="" class="button popup-btn" id="live">See Live <img src="images/arrow-icon.png" alt="Arrow-Image"></a>
+                  <a href="" class="button popup-btn" id="source">See Source <img src="images/github-icon.png" alt="GitHub-Image"></a>
                 </div>
               </div>
             </div>
