fixed issues from js files

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
             <input class="form-input" type="text" name="name" maxlength="30" placeholder="Name" required>
             <input class="form-input" id="email" type="email" name="email" placeholder="Email" required>
             <textarea class="form-input" name="message" maxlength="500" cols="30" rows="10" placeholder="Write your message here" required></textarea>
-            <button class="button contact-button" type="submit" onclick="formValidate()">Get In Touch</button>
+            <button class="button contact-button" id="form-btn" type="submit">Get In Touch</button>
             <span id="error-message"></span>
           </form>
 
