--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <!-- popup -->
 
-        <div class="modal" id="modal">
+        <div class="modal" i  >
 
           <div class="modal-header">
 
@@ -386,7 +386,7 @@
             <input class="form-input" id="email" type="email" name="email" placeholder="Email" required>
             <textarea class="form-input" name="message" maxlength="500" cols="30" rows="10" placeholder="Write your message here" required></textarea>
             <button class="button contact-button" id="form-button" type="submit">Get In Touch</button>
-            <span id="error-popup"></span>
+            <span id="error-message"></span>
           </form>
 
         </div>
