--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!-- navbar -->
       <nav class="navbar">
 
-        <img class="logo" alt="Portfolio-Logo" src="images/my_logo.png">
+        <img class="logo" alt="Portfolio-Logo" src="images/logo.png" width="100" height="100">
 
         <ul class="nav-options-ul">
 
