--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" type="text/css" href="css/work-section.css">
     <link rel="stylesheet" type="text/css" href="css/about-myself.css">
     <link rel="stylesheet" type="text/css" href="css/contact-form.css">
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/2f09744991.js" crossorigin="anonymous"></script>
   </head>
   <body id="main">
     <section class="container">
@@ -48,18 +50,35 @@
       <div class="introduction" id="portfolio">
         <div class="intro-area">
           <h1 class="header">
-            I'm Aleem <br>
+            I'm Muhammad Aleem <br>
             Glad to see <br>
             you!
           </h1>
           <p class="intro">
-            I'm a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+            I'm a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.
           </p>
-          <a href="" class="button">LET'S CONNECT</a>
+          <a onclick="window.open('mailto:aleemhashmi4321@gmail.com', '_blank');" class="button">LET'S CONNECT</a>
           <ul class="profiles">
-            <li><a href="https://twitter.com/MAleemHashmi1"><img alt="Twitter-Image" src="images/twitter.png"></a></li>
-            <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img alt="LinkedIn-Image" src="images/linkedin.png"></a></li>
-            <li><a href="https://github.com/MAleemH"><img alt="GitHub-Image" src="images/github.png"></a></li>
+            <li>
+              <a href="https://twitter.com/MAleemHashmi1">
+                <i class="fa-brands fa-square-twitter fa-xl" style="color: #2f6ad0;"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://web.facebook.com/muhammad.aleem.hashmi1">
+                <i class="fa-brands fa-square-facebook fa-xl" style="color: #2f6ad0;"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/muhammad-aleem-hashmi/">
+                <i class="fa-brands fa-linkedin fa-xl" style="color: #2f6ad0;"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/MAleemH">
+                <i class="fa-brands fa-square-github fa-xl" style="color: #2f6ad0;"></i>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -323,15 +342,32 @@
         <div class="flex-item">
           <h2 class="header">About Myself</h2>
           <p class="intro">
-            I'm a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hestiate to contact me.
+            I'm a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.
           </p>
-          <a href="" class="button button-2">LET'S CONNECT</a>
+          <a onclick="window.open('mailto:aleemhashmi4321@gmail.com', '_blank');" class="button button-2">LET'S CONNECT</a>
           <ul class="profiles">
-            <li><a href="https://twitter.com/MAleemHashmi1"><img alt="Twitter-Image" src="images/twitter.png"></a></li>
-            <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img alt="LinkedIn-Image" src="images/linkedin.png"></a></li>
-            <li><a href="https://github.com/MAleemH"><img alt="GitHub-Image" src="images/github.png"></a></li>
+            <li>
+              <a href="https://twitter.com/MAleemHashmi1">
+                <i class="fa-brands fa-square-twitter fa-xl" style="color: #2f6ad0;"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://web.facebook.com/muhammad.aleem.hashmi1">
+                <i class="fa-brands fa-square-facebook fa-xl" style="color: #2f6ad0;"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/muhammad-aleem-hashmi/">
+                <i class="fa-brands fa-linkedin fa-xl" style="color: #2f6ad0;"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/MAleemH">
+                <i class="fa-brands fa-square-github fa-xl" style="color: #2f6ad0;"></i>
+              </a>
+            </li>
           </ul>
-          <a href="" class="button resume-btn-border">Get my resume</a>
+          <a onclick="window.open('https://docs.google.com/document/d/1tmhEBa3la-9pftspluLYMiE5n6c63uLzTjBP4A9PtaY/edit?usp=sharing', '_blank');" class="button resume-btn-border">Get my resume</a>
         </div>
 
         <div class="flex-item">
