Added missing id for popup

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <!-- popup -->
 
-        <div class="modal" i  >
+        <div class="modal" id="modal">
 
           <div class="modal-header">
 
